# open_gl_app

./: CMakeLists.txt
app/: .CMakeLists.txt.swp  .main.cpp.swp  CMakeLists.txt  main.cpp
app/1_triangle/: CMakeLists.txt  main.cpp
app/1_triangle/shaders/: shader.frag  shader.vert
app/open_gl_app/: CMakeLists.txt
lib/: CMakeLists.txt  camera.cpp  camera.h  lib.cpp  lib.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
